kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-backend
  namespace: default
  labels:
    app: rag-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rag-backend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rag-backend
    spec:
      containers:
        - name: backend
          # image: nikayz/shaky-backend:latest
          image: nikayz/shaky-backend:v3
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: faiss-data
              # your cache folder
              mountPath: /shakespeare/backend/pipeline/cache
            - name: log-dir
              mountPath: /var/log
      volumes:
        - name: faiss-data
          persistentVolumeClaim:
            claimName: faiss-pvc
        - name: log-dir
          emptyDir: {}
